--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+SpartaConfig*
+vendor/*
+graph.html
+tags
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -22,4 +27,4 @@ _testmain.go
 *.exe
 *.test
 *.prof
-graph.html
+.sparta/*
